[package]
name = "adzuna"
version = "1.0.0"
authors = ["Kamui <fin-kamui@pm.me>"]
edition = "2021"
description = "An easy to use, asynchronous, and complete API wrapper for interacting with the Adzuna API."
homepage = "https://github.com/kamui-fin/adzuna-rs"
repository = "https://github.com/kamui-fin/adzuna-rs"
license = "GPL-3.0-only"
keywords = ["adzuna", "jobs-api", "api-wrapper"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
async-trait = "0.1.64"
